fix(styles): :lipstick: fix date input overflowing on smaller screens

--- a/src/components/Form/styles.module.scss
+++ b/src/components/Form/styles.module.scss
@@ -49,6 +49,11 @@
     padding: 0.75rem 1rem;
   }
 
+  // Specific for the input not to overflow
+  input[type='text'] {
+    max-width: 100%;
+  }
+
   select {
     font-size: 1rem;
     min-height: 3rem;
